--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -6,7 +6,7 @@
 # See https://github.com/r-lib/actions/tree/master/examples#readme for
 # additional example workflows available for the R community.
 
-name: R
+name: R-Check
 
 on:
   push:
@@ -19,10 +19,10 @@ permissions:
 
 jobs:
   build:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        r-version: ['3.6.3', '4.1.1']
+        r-version: ['3.6.3']
 
     steps:
       - uses: actions/checkout@v3
